# libcamgm

./: .gitignore  ChangeLog  MAINTAINER  Makefile.am  Makefile.cvs  POTFILES  README  README.mkd  RPMNAME  SUBDIRS  TODO  acinclude.m4  aclocal.m4  config.h.in  configure.ac  configure.in  configure.in.in  libcamgm.pc.in  limal-ca-mgm.pc.in  limal-ca-mgm.spec.in
doc/: Makefile.am  limal-ca-mgm.xml
doc/autodocs/: Makefile.am  doxygen.conf
doc/examples/: CreateCertificate.cpp  CreateRootCA.cpp  Export.cpp  RevokeCertificateAndCreateCRL.cpp
src/: AuthorityInfoAccessExtension.cpp  AuthorityKeyIdentifierExtension.cpp  AuthorityKeyIdentifierExtension_Int.cpp  AuthorityKeyIdentifierExtension_Int.hpp  AuthorityKeyIdentifierExtension_Priv.cpp  AuthorityKeyIdentifierExtension_Priv.hpp  AuthorityKeyIdentifierGenerateExtension.cpp  BasicConstraintsExtension.cpp  BitExtensions.cpp  ByteBuffer.cpp  CA.cpp  CAConfig.cpp  CATools.ini  CATools.pm  CRLData.cpp  CRLDataImpl.hpp  CRLData_Int.hpp  CRLData_Priv.cpp  CRLData_Priv.hpp  CRLDistributionPointsExtension.cpp  CRLGenerationData.cpp  CRLReason.cpp  CRLReason_Priv.cpp  CRLReason_Priv.hpp  CertificateData.cpp  CertificateDataImpl.hpp  CertificateData_Int.cpp  CertificateData_Int.hpp  CertificateData_Priv.cpp  CertificateData_Priv.hpp  CertificateIssueData.cpp  CertificatePoliciesExtension.cpp  Commands.hpp.in  DNObject.cpp  DNObjectImpl.hpp  DNObject_Int.hpp  DNObject_Priv.cpp  DNObject_Priv.hpp  Date.cpp  Exception.cpp  (+65 more)
src/INIParser/: INIParser.cpp  INIParser.hpp  INIParserDescr.hpp  IniFile.cpp  IniFile.h  IniParser.cpp  IniParser.h
src/OPENSSL/: CATools.pm
src/ca-mgm/: AuthorityInfoAccessExtension.hpp  AuthorityKeyIdentifierExtension.hpp  AuthorityKeyIdentifierGenerateExtension.hpp  BasicConstraintsExtension.hpp  BitExtensions.hpp  ByteBuffer.hpp  CA.hpp  CAConfig.hpp  CRLData.hpp  CRLDistributionPointsExtension.hpp  CRLGenerationData.hpp  CRLReason.hpp  CallbackBase.hpp  CertificateData.hpp  CertificateIssueData.hpp  CertificatePoliciesExtension.hpp  CommonData.hpp  DNObject.hpp  Date.hpp  Exception.hpp  ExtendedKeyUsageExt.hpp  ExtensionBase.hpp  ExternalDataSource.hpp  ExternalProgram.hpp  IssuerAlternativeNameExtension.hpp  LiteralValues.hpp  LocalManagement.hpp  LogControl.hpp  Logger.hpp  Makefile.am  PathInfo.hpp  PathName.hpp  PathUtils.hpp  PerlRegEx.hpp  PosixRegEx.hpp  PtrTypes.hpp  ReferenceCounted.hpp  RequestData.hpp  RequestGenerationData.hpp  String.hpp  (+17 more)
src/limal/: ByteBuffer.hpp  CallbackBase.hpp  Date.hpp  Exception.hpp  ExternalProgram.hpp  LogControl.hpp  Logger.hpp  Makefile.am  PathInfo.hpp  PathName.hpp  PathUtils.hpp  PerlRegEx.hpp  PosixRegEx.hpp  PtrTypes.hpp  ReferenceCounted.hpp  String.hpp  Url.hpp  UrlBase.hpp  UrlUtils.hpp  ValueCheck.hpp  ValueIntCheck.hpp  ValuePerlRECheck.hpp  ValuePosixRECheck.hpp  ValueRegExCheck.hpp
swig/perl5/: Makefile.am
swig/python/: Makefile.am
swig/ruby/: Makefile.am
testsuite/: CA1.cc  CA2.cc  CA3.cc  CA4.cc  CA5.cc  CA6.cc  CA7.cc  CA8.cc  CA9.cc  CAConfig.cc  CRLTest.cc  CertificateTest.cc  CertificateTest2.cc  CertificateTest3.cc  CertificateTest4.cc  CertificateTest5.cc  CertificateTest6.cc  CertificateTest7.cc  ConvertTest.cc  DeleteCATest.cc  ExportTest.cc  IPv6CheckTest.cc  ImportCATest.cc  ImportCATest2.cc  ImportCommonCertificateTest.cc  ImportRequestTest.cc  ListCATreeTest.cc  ListTest.cc  Makefile.am  ParseCATest.cc  ParseCRLTest.cc  ParseCertificateTest.cc  ParseCertificateTest2.cc  ParseRequestTest.cc  RemoveCertificateTest.cc  RemoveRequestTest.cc  RequestTest.cc  RevokeTest.cc  RevokeTest2.cc  RevokeTest3.cc  (+18 more)
testsuite/CA2/: testcase1.err  testcase1.out  testcase2.err  testcase2.in  testcase2.out  testcase3.err  testcase3.in  testcase3.out
testsuite/CA3/: testcase1.err  testcase1.out  testcase2.err  testcase2.in  testcase2.out  testcase3.err  testcase3.out
testsuite/CA4/: testcase1.err  testcase1.out
testsuite/CA5/: testcase1.err  testcase1.in  testcase1.out  testcase2.err  testcase2.out  testcase3.err  testcase3.out
testsuite/CA6/: testcase1.err  testcase1.in  testcase1.out  testcase2.err  testcase2.out  testcase3.err  testcase3.in  testcase3.out
testsuite/CA7/: testcase1.err  testcase1.in  testcase1.out
testsuite/ParseCRLTest/: testcase1.err  testcase1.in  testcase1.out
testsuite/ParseCertificateTest/: testcase1.err  testcase1.in  testcase1.out
testsuite/ParseCertificateTest2/: testcase1.err  testcase1.in  testcase1.out  testcase2.err  testcase2.in  testcase2.out  testcase3.err  testcase3.in  testcase3.out  testcase4.err  testcase4.in  testcase4.out  testcase5.err  testcase5.in  testcase5.out  testcase6.err  testcase6.in  testcase6.out
testsuite/ParseRequestTest/: testcase1.err  testcase1.in  testcase1.out  testcase2.err  testcase2.in  testcase2.out
testsuite/TestRepos/: Makefile.am  anyPolicyCA.key  anyPolicyCA.pem  importCATest.key  importCATest.pem  importCATestEnc.key  importRequestTest-DER.req  importRequestTest.req
testsuite/TestRepos3/: edir-cert.pem  openssl.cnf.tmpl  testuser.pem  windows-ca.crt  windows-client.crt  windows-kdc.crt
testsuite/config/: Makefile.am
testsuite/iniParser/: chg1.err  chg1.ini  chg1.out  comment.err  comment.in  comment.out  delete.err  delete.in  delete.ini  delete.out  read1.err  read1.in  read1.out  select1.err  select1.in  select1.ini  select1.out  wr_add.err  wr_add.in  wr_add.out  wr_chg.err  wr_chg.in  wr_chg.out
testsuite/lib/: Makefile.am  limal_init.exp
testsuite/limal.test/: single_test.exp
testsuite/single.out/: CA1.err  CA1.out  CA8.err  CA8.out  CA9.err  CA9.out  CAConfig.err  CAConfig.out  CRLTest.out  CertificateTest.out  CertificateTest2.out  CertificateTest4.out  CertificateTest5.out  CertificateTest6.err  CertificateTest6.out  CertificateTest7.out  ConvertTest.err  ConvertTest.out  DeleteCATest.err  DeleteCATest.out  ExportTest.out  IPv6CheckTest.out  ImportCATest.err  ImportCATest.out  ImportCATest2.out  ImportCommonCertificateTest.out  ImportRequestTest.out  ListTest.err  ListTest.out  ParseCATest.err  ParseCATest.out  RemoveRequestTest.out  RequestTest.out  (+19 more)
(+291 files in other folders)
