#
# Makefile.am for limal-ca-mgm/src/limal
#

SUBDIRS = ca-mgm
# these go to $(limalincludedir)
#pkglimalinclude_HEADERS =          \
limalinclude_HEADERS =          \
        ValuePosixRECheck.hpp   \
        ValuePerlRECheck.hpp    \
        ValueRegExCheck.hpp     \
        ValueIntCheck.hpp       \
        ValueCheck.hpp          \
        CallbackBase.hpp        \
        Exception.hpp           \
        Logger.hpp              \
        LogControl.hpp          \
        PathName.hpp            \
        PathInfo.hpp            \
        PathUtils.hpp           \
        ByteBuffer.hpp          \
        UrlUtils.hpp            \
        UrlBase.hpp             \
        Url.hpp                 \
        Date.hpp                \
        String.hpp              \
        PerlRegEx.hpp           \
        PosixRegEx.hpp          \
        PtrTypes.hpp            \
        ExternalProgram.hpp     \
        ExternalDataSource.hpp



CLEANFILES = *~

